hopefully fixing overlap re #258

--- a/cdw/static/css/style.less
+++ b/cdw/static/css/style.less
@@ -395,7 +395,7 @@ div.footer {
     }
     
     div.like-btn {
-      width: 85px;
+      width: 100px;
     }
   }
   
